--- a/20200315/20200315.md
+++ b/20200315/20200315.md
@@ -1,20 +1,35 @@
 # 1.环境准备
-## 1.1.chocolatey 
+chocolatey 
 [https://www.chocolatey.org/install](https://www.chocolatey.org/install)
 
 右键点击开始菜单-Windows PowerShell(管理员)，输入
 ```
 Set-ExecutionPolicy Bypass -Scope Process -Force; [System.Net.ServicePointManager]::SecurityProtocol = [System.Net.ServicePointManager]::SecurityProtocol -bor 3072; iex ((New-Object System.Net.WebClient).DownloadString('https://chocolatey.org/install.ps1'))
 ```
-## 1.2.git
-`choco install git`
-## 1.3.vscode
-`choco install vscode`
+# 2.环境安装
+## 2.1.批量安装环境
+`choco install git vscode mingw -y`
+## 2.2.独立安装环境
+### 2.2.1.git
+`choco install git -y`
+### 2.2.2.vscode
+`choco install vscode -y`
 或
 [https://code.visualstudio.com](https://code.visualstudio.com/)
-### 1.3.1.中文插件
-### 1.3.2.c/c++插件
+### 2.2.3.gcc
+`choco install mingw -y`
+## 2.3.vscode插件安装
+### 2.3.1.中文插件
+搜索 chinese
+### 2.3.2.c/c++插件
+搜索 c/c++
 
-## 1.4.复制代码
+# 3.第一个demo
+## 3.1.复制代码
 代码库地址[https://github.com/956237586/2020-c](https://github.com/956237586/2020-c)
-## 1.5.HelloWorld
+# 3.2.执行HelloWorld
+编译
+powershell
+gcc 20200315-helloworld.c
+运行
+./a
