--- a/20200315/20200315.md
+++ b/20200315/20200315.md
@@ -23,6 +23,8 @@ Set-ExecutionPolicy Bypass -Scope Process -Force; [System.Net.ServicePointManage
 搜索 chinese
 ### 2.3.2.c/c++插件
 搜索 c/c++
+### 2.3.3.Git Graph
+搜索 Git Graph
 
 # 3.第一个demo
 ## 3.1.复制代码
