--- a/20200315/20200315.md
+++ b/20200315/20200315.md
@@ -31,7 +31,6 @@ Set-ExecutionPolicy Bypass -Scope Process -Force; [System.Net.ServicePointManage
 代码库地址[https://github.com/956237586/2020-c](https://github.com/956237586/2020-c)
 # 3.2.执行HelloWorld
 编译
-powershell
-gcc 20200315-helloworld.c
+gcc demo.c
 运行
 ./a
