--- a/20200315/20200315.md
+++ b/20200315/20200315.md
@@ -29,6 +29,7 @@ Set-ExecutionPolicy Bypass -Scope Process -Force; [System.Net.ServicePointManage
 # 3.第一个demo
 ## 3.1.复制代码
 代码库地址[https://github.com/956237586/2020-c](https://github.com/956237586/2020-c)
+选择tag为helloworld
 # 3.2.执行HelloWorld
 编译
 gcc demo.c
