--- a/20200315/20200315.md
+++ b/20200315/20200315.md
@@ -1,23 +1,38 @@
-# 1.环境准备
-chocolatey 
+# 1.前言
+主要步骤分为基础环境安装和vscode配置
+然后从3开始就可以开始写代码啦~
+
+# 2.环境安装
+如果你的网速足够好，可以选择2.0 + 2.1
+
+如果遇到卡住或下载缓慢，请按Ctrl+C中止任务重新执行
+
+如果还是不行，请直接从百度云下载，按视频操作
+链接: https://pan.baidu.com/s/19N369C-bv7bkYnNeif1IqQ 
+提取码: g4g4 
+## 2.0.chocolatey 
 [https://www.chocolatey.org/install](https://www.chocolatey.org/install)
 
 右键点击开始菜单-Windows PowerShell(管理员)，输入
 ```
 Set-ExecutionPolicy Bypass -Scope Process -Force; [System.Net.ServicePointManager]::SecurityProtocol = [System.Net.ServicePointManager]::SecurityProtocol -bor 3072; iex ((New-Object System.Net.WebClient).DownloadString('https://chocolatey.org/install.ps1'))
 ```
-# 2.环境安装
 ## 2.1.批量安装环境
 `choco install git vscode mingw -y`
 ## 2.2.独立安装环境
 ### 2.2.1.git
 `choco install git -y`
+或
+[https://git-scm.com/download/win](https://git-scm.com/download/win)
 ### 2.2.2.vscode
 `choco install vscode -y`
 或
 [https://code.visualstudio.com](https://code.visualstudio.com/)
 ### 2.2.3.gcc
 `choco install mingw -y`
+或
+自行搜索mingw配置gcc到PATH
+
 ## 2.3.vscode插件安装
 ### 2.3.1.中文插件
 搜索 chinese
@@ -32,7 +47,11 @@ Set-ExecutionPolicy Bypass -Scope Process -Force; [System.Net.ServicePointManage
 选择tag为helloworld
 # 3.2.执行HelloWorld
 编译
+
 gcc demo.c
+
 运行
+
 ./a
+
 复制demo到当天的文件夹存档
