Update and rename 20200315.md to 环境搭建.md
增加国内云盘地址

--- a/20200315/环境搭建.md
+++ b/20200315/环境搭建.md
@@ -7,7 +7,10 @@
 
 如果遇到卡住或下载缓慢，请按Ctrl+C中止任务重新执行
 
-如果还是不行，请直接从百度云下载，按视频操作
+如果还是不行，请直接从云盘下载，按视频操作
+国内蓝奏云盘 https://hylstudio.lanzous.com/b01nlbfah
+
+BD云
 链接: https://pan.baidu.com/s/19N369C-bv7bkYnNeif1IqQ 
 提取码: g4g4 
 ## 2.0.chocolatey 
